crates/willikins-providers-appstore/tests/it/snapshots/it__catalog_parity__appstore_bundle_id_capability_ensure_spec.snap
---
source: crates/willikins-providers-appstore/tests/it/catalog_parity.rs
expression: "spec_json(AppstoreBundleIdCapabilityEnsure::new(NOWHERE).spec())"
---
{
  "class": "reversible",
  "description": "Switch on one capability of an already-registered App Store Connect bundle id.",
  "inputs": {
    "capability": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "AppleCapabilityType"
      }
    },
    "identifier": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "AppleBundleIdentifier"
      }
    },
    "issuer_id": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "AppleIssuerId"
      }
    },
    "key": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "AppleSigningKey"
      }
    },
    "key_id": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "AppleKeyId"
      }
    },
    "setting": {
      "required": false,
      "ty": {
        "kind": "exact",
        "type": "AppleCapabilitySetting"
      }
    }
  },
  "key": [
    "identifier",
    "capability"
  ],
  "name": "appstore.bundle_id_capability.ensure",
  "outputs": {
    "capability": "AppleCapabilityType"
  },
  "pure": false
}
