crates/willikins-providers-appstore/tests/it/snapshots/it__catalog_parity__appstore_certificate_get_spec.snap
---
source: crates/willikins-providers-appstore/tests/it/catalog_parity.rs
expression: "spec_json(AppstoreCertificateGet::new(NOWHERE).spec())"
---
{
  "class": "reversible",
  "description": "Select an App Store Connect distribution certificate by type and serial number.",
  "inputs": {
    "certificate_type": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "AppleCertificateType"
      }
    },
    "issuer_id": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "AppleIssuerId"
      }
    },
    "key": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "AppleSigningKey"
      }
    },
    "key_id": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "AppleKeyId"
      }
    },
    "serial_number": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "AppleCertificateSerial"
      }
    }
  },
  "key": [],
  "name": "appstore.certificate.get",
  "outputs": {
    "certificate": "AppleCertificateId"
  },
  "pure": true
}
